# haskell-generate

./: .travis.yml  LICENSE  README.md  Setup.hs  groups  haskell-generate.cabal  project.config
src/Language/Haskell/: Generate.hs
src/Language/Haskell/Generate/: Base.hs  Expression.hs  Monad.hs  PreludeDef.hs  TH.hs
tests/: doctests.hsc
travis/: script.sh
